<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TableLayout
            android:id="@+id/viewRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <Button
                android:id="@+id/btnStartStopRecording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="btnStartStopClicked"
                android:text="@string/start" />

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblLongitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/table_padding_leftright"
                    android:paddingRight="@dimen/table_padding_leftright"
                    android:text="@string/longitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblLatitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/table_padding_leftright"
                    android:paddingRight="@dimen/table_padding_leftright"
                    android:text="@string/latitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblAltitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/altitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/table_padding_leftright"
                    android:paddingRight="@dimen/table_padding_leftright"
                    android:text="@string/altitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblAccuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accuracy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/table_padding_leftright"
                    android:paddingRight="@dimen/table_padding_leftright"
                    android:text="@string/accuracy"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="#FF909090" />

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/lblSatellites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/satellites"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/satellites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/table_padding_leftright"
                    android:paddingRight="@dimen/table_padding_leftright"
                    android:text="@string/satellites"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>
        </TableLayout>
    </FrameLayout>

    <!-- The navigation drawer -->

    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#d6d6d6"
        android:choiceMode="singleChoice"
        android:divider="#e5e5e5"
        android:dividerHeight="1dp" />

</android.support.v4.widget.DrawerLayout>